system/argocd/templates/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-prefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
